--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -19,11 +20,18 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.2.0",
+    "@types/jest": "^28.1.1",
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/testing-library__jest-dom": "^5.14.3",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "typescript": "4.7.3"
   }
 }
