--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -20,6 +21,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.15.0",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.0",
